add endpoint  /api/v1/customer/register
