# internal/model/customer.go
@@ -1,0 +1,7 @@
+package model
+
+type CustomerRegisterRequest struct {
+	Fullname string `json:"fullname" validate:"required"`
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=8,max=20"`
+}
